--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>1 And The Other</title>
+  <title>OATO</title>
   <link rel="stylesheet" type="text/css" href="GA game/css/clear.css">
   <link rel="stylesheet" type="text/css" href="/Users/Brandon/Downloads/home/fundamentals/wdi-fundamentals-memorygame/starter-code/style.css">
 
@@ -15,20 +15,17 @@
 
   <img src="/Users/Brandon/Downloads/home/fundamentals/wdi-fundamentals-memorygame/starter-code/homer.png" alt="picture here" title="Greatest background ever">
   
-    <h1>1 and the other</h1>
+    <h1>One and The Other</h1>
     <a name="instructions"><h2 >Instructions</h2></a>
       <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 
     <a name="game"><h2 >Why this game is awesome</h2></a>
-      <p>1 And The Other is a fun to play memory game that enhances your abiliy to focus as well as your spacial perception and directional memory
+      <p>One and The Other is a fun-to-play memory game that enhances your ability to focus as well as your spacial perception and directional memory
       </p>
       <hr>
     
-    <div class="board">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+    <div class="board" id="game-board">
+       
        </div>  
 
       <footer>Created with &hearts; by <span class="name">GA</span></footer>
